--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     </section>
 
     <section class="galeria-fotos py-4" id="galeriaFotos">
-        <h2 class="text-center pt-4 pb-2">Galeria</h2>
+        <h2 class="text-center pt-4 pb-2">Galería</h2>
         <div class="container">
             <div class="card-columns" id="galeriaCont">
             </div>
